--- a/src/components/LoadingSpinner/LoadingSpinner.css
+++ b/src/components/LoadingSpinner/LoadingSpinner.css
@@ -12,7 +12,7 @@
 
 .loading-spinner {
   border: 2px solid #f3f3f3;
-  border-top: 2px solid #3498db;
+  border-top: 2px solid #2979af;
   border-radius: 50%;
   width: 16px;
   height: 16px;
